# HIPE-OCRepair-scorer

./: LICENSE  README.md  create_dummy_baselines.py  pyproject.toml  run_ocrepair_scorer_example.py  summary.md
data/sample/hypothesis/: championteam_hipe-ocrepair-bench_v0.9_icdar2017_v1.2_train_fr_run1.sample.jsonl
data/sample/hypothesis/no_edits_baseline/: no_edits_hipe-ocrepair-bench_v0.9_icdar2017_v1.2_train_fr.sample_run1.jsonl  no_edits_hipe-ocrepair-bench_v0.9_overproof-ca_v1.0_all_en.sample_run1.jsonl
data/sample/hypothesis/random_edits_baseline/: random_hipe-ocrepair-bench_v0.9_icdar2017_v1.2_train_fr.sample_run1.jsonl  random_hipe-ocrepair-bench_v0.9_overproof-ca_v1.0_all_en.sample_run1.jsonl
data/schema/: hipe-ocrepair.schema.json
hipe_ocrepair_scorer/: __init__.py  cli.py  ocrepair_eval.py
hipe_ocrepair_scorer/data/sample/hypothesis/: championteam_hipe-ocrepair-bench_v0.9_overproof-ca_v1.0_all_en_run1.sample.jsonl
hipe_ocrepair_scorer/data/schema/: hipe-ocrepair.schema.json
